# GMAPD_UART

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Readme.md  main.cpp  mbuild.sh  patch_cooler.patch  patch_cooler_cpp.patch  patch_success.patch  preprocess_uart_slave_patch.patch  readmd.md
binOutput/: GMAPD_UART  GMAPD_UART_COOLER  GMAPD_UART_udp  test
config/: sysCfg.json  userCfg.json
examplecode/: appExample.cpp  appExample.h  main.cpp
include/: bindMap.h  bindMapCfg.h  commInfo.h  doubleQue.h  ftokProcess.h  gpioClass.h  img.h  peripheryApi.h  pwProcess.h  rkSysConfig.h  rkVdec.h  rkVdecConfig.h  rkVencMod.h  rkVpssConfig.h  rkVpssMod.h  rtspServerApi.h  rtspServerConfig.h  tcpSer.h  uartClass.h  udpSer.h  version_info.h  xdma.h  xdmaCfg.h  xdmaVideo.h  xdmaVideoCfg.h  xdmaVideoDefine.h
include/include/: cli.h  commInfo.h  imgQue.h  pwProcess.h  rkSys.h  rkVencConfig.h  rkVencMod.h  spiClass.h  tde.h  xdma.h
include/periphery/: spi.h  version.h
include/platform/: rk_defines.h
lib/opencv4/include/opencv4/opencv2/: cvconfig.h
lib/opencv4/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
task_module/: CALLBACK_USAGE.md
task_module/cpp/: apd_control.cpp  apd_voltage_table.cpp  async_cooler_example.cpp  cooler_control.cpp  cooler_protocol.cpp  depth_process.cpp  laser_energy_process.cpp  log.cpp  preprocess_uart_protocol.cpp  preprocess_uart_slave.cpp  serial_utils.cpp  task_reg.cpp  tof_process.cpp  udp_send.cpp  util.cpp
task_module/header/: apd_control.h  apd_reg.h  apd_voltage_table.h  buffer.h  cooler_control.h  cooler_protocol.h  depth_process.h  laser_energy_process.h  log.h  preprocess_uart_protocol.h  preprocess_uart_slave.h  serial.h  serial_utils.h  task_reg.h  tof_process.h  uart.h  uart_read.h  udp_send.h  util.h
参考文档/: APD焦平面BOOST电压设置表_SDR.xlsx  cryocooler_protocol.md  通讯协议.md
